CallSite dependency tracking is broken after sun.misc.Cleaner became automatically cleared

XMLWordPrintable

    • Type: Bug
    • Resolution: Fixed
    • Priority: P1
    • 9
    • Affects Version/s: 9
    • Component/s: hotspot
    • None
    • b69
    • Verified

        This TEST: compiler/jsr292/CallSiteDepContextTest.java,
        from the c[1 2]-hotspot_compiler_3 set,
        is failing after merging jdk9/dev with jdk9/hs (on all platforms).

        #
        # A fatal error has been detected by the Java Runtime Environment:
        #
        # SIGSEGV (0xb) at pc=0x402ba786, pid=31324, tid=0x53bb6b90
        #
        # JRE version: Java(TM) SE Runtime Environment (9.0) (build 1.9.0-internal-fastdebug-20150501110205.amurillo.jdk9-hs-2015-04--b00)
        # Java VM: Java HotSpot(TM) Client VM (1.9.0-internal-fastdebug-20150501110205.amurillo.jdk9-hs-2015-04--b00 mixed mode linux-x86 )
        # Problematic frame:
        # V [libjvm.so+0x28d786] ciCallSite::get_context()+0x2f6
        #

        this is happening after merging with jdk9/dev. It passed for the comp to hs pushing job,
        so I suspect it's related to changes coming from jdk9/dev/hotspot.
        Note that that specific test is excluded in jdk9/dev (not run on jkd9/dev jprt jobs with "-testset hotspot")

          There are no Sub-Tasks for this issue.

              Assignee:
              Vladimir Ivanov
              Reporter:
              Alejandro Murillo
              Votes:
              0 Vote for this issue
              Watchers:
              6 Start watching this issue

                Created:
                Updated:
                Resolved: