8079205: CallSite dependency tracking is broken after sun.misc.Cleaner became automatically cleared

Reviewed-by: roland, psandoz, plevart, kbarrett, jrose